--- a/views/index.ejs
+++ b/views/index.ejs
@@ -47,85 +47,8 @@
         
     </div>
 </section>
- <section class="bottom-content">
-
- <div class="bottom-content">
-
-    <article class="pd-product">
-        <img class="pd-img-product" src="/images/img-beer-temporary.jpg" alt="beer">
-        <div class="pd-datos-cerveza">
-            <h4>IPA</h4>
-            <h4>$ 250</h4>
-            <button class="pd-seleccionar">Seleccionar</button>
-            <button class="pd-add"><a href="/productCart">Agregar al carrito</a></button>
-        </div>
-
-    </article>
-
-    <article class="pd-product">
-        <img class="pd-img-product" src="/images/img-beer-temporary.jpg" alt="beer">
-        <div class="pd-datos-cerveza">
-            <h4>Golden Ale</h4>
-            <h4>$ 200</h4>
-            <button class="pd-seleccionar">Seleccionar</button>
-            <button class="pd-add"><a href="/productCart">Agregar al carrito</a></button>
-        </div>
-    </article>
-
-    <article class="pd-product">
-        <img class="pd-img-product" src="/images/img-beer-temporary.jpg" alt="beer">
-        <div class="pd-datos-cerveza">
-            <h4>Irish Red</h4>
-            <h4>$ 200</h4>
-            <button class="pd-seleccionar">Seleccionar</button>
-            <button class="pd-add"><a href="/productCart">Agregar al carrito</a></button>
-        </div>
-    </article>
-
-    <article class="pd-product">
-        <img class="pd-img-product" src="/images/img-beer-temporary.jpg" width="360" alt="beer">
-        <div class="pd-datos-cerveza">
-            <h4>Stout</h4>
-            <h4>$ 200</h4>
-            <button class="pd-seleccionar"><a href="/productDetail">Seleccionar</a></button>
-            <button class="pd-add"><a href="/productCart">Agregar al carrito</a></button>
-        </div>
-    </article>
-
-    <article class=" pd-product">
-        <img class="pd-img-product" src="/images/img-beer-temporary.jpg" width="360" alt="beer">
-        <div class="pd-datos-cerveza">
-            <h4>Honey</h4>
-            <h4>$ 200</h4>
-            <button class="pd-seleccionar">Seleccionar</button>
-            <button class="pd-add"><a href="/productCart">Agregar al carrito</a></button>
-        </div>
-    </article>
-
-    <article class="pack-customized">
-        <img class="pd-img-product" src="/images/img-beer-temporary.jpg" width="360" alt="beer">
-        <div class="pd-datos-cerveza">
-            <h4>Pack Personalizado</h4>
-            <h4>Desde $ 600</h4>
-            <button class="pd-seleccionar"><a href="/pack">Seleccionar</a></button>
-        </div>
-    </article>
-    </div>
-</section>   
-  
-    <section class="ind-bottom">
-    <div class="ind-map-env-pag">
-        <a class="ind-bottom" href="/mapa-envios">Zonas de influencia </a>
-        <i class="fas fa-map-marker-alt"></i>
-    </div>
-    <div class="ind-map-env-pag">
-        <a class="ind-bottom" href="/metodos-envios">Métodos de Envios </a>
-        <i class="fas fa-motorcycle"></i>
-    </div>
-    <div class="ind-map-env-pag">
-        <a class="ind-bottom" href="/metodos-pagos">Formas de Pago </a> 
-        <i class="fas fa-hand-holding-usd"></i>
-    </div>
+    <section class="bottom-content">
+     <%- include('./partials/articles')%>
     </section>
     <div class="testDiv">
         
