--- a/views/product/productPage.ejs
+++ b/views/product/productPage.ejs
@@ -7,22 +7,12 @@
 <body>
     <!-- Header-->
     <%- include("../partials/header") %>
-
+    
 
     <main class="pd-main">
         <h2 class="pd-titulo">Tienda</h2>
         <section class="pd-tienda">
-        <% for (i=0;i< type.length;i++){%>
-            <article class="pd-product">
-                <img class="pd-img-product" src="/images/img-beer-temporary.jpg" width="360" alt="beer">
-                <div class="pd-datos-cerveza">
-                    <h4><%= type[i].nombre %></h4>
-                    <h4>$ <%= type[i].precio %></h4>
-                    <button class="pd-seleccionar"><a href="/product/productDetail/<%= i %>" class="lg-a">Seleccionar</a></button>
-                    <button class="pd-add"><a href="/product/productCart" class="lg-a">Agregar al carrito</a></button>
-                </div>
-            </article>
-            <%}%>
+        <%- include("../partials/articles") %>
     </main>
    
     <!-- Suscribe email-->
