--- a/views/partials/articles.ejs
+++ b/views/partials/articles.ejs
@@ -1,4 +1,4 @@
-<% for (i=0;i< type.length;i++){%>
+<% for (i=1;i< type.length;i++){%>
     <article class="pd-product">
         <img class="pd-img-product" src="/images/img-beer-temporary.jpg" width="360" alt="beer">
         <div class="pd-datos-cerveza">
@@ -6,7 +6,7 @@
             <h4>$ <%= type[i].precio %></h4>
             <button class="pd-seleccionar"><a href="/product/productDetail/<%= i %>" class="lg-a">Seleccionar</a></button>
             <button class="pd-add"><a href="/product/productCart" class="lg-a">Agregar al carrito</a></button>
-            <button class="pd-add"><a href="/product/productAdmin/<%= i %>" class="lg-a">Modificar</a></button>
+            <button class="pd-admin"><a href="/product/productAdmin/<%= i %>" class="pd-admin-a">Modificar </i></a></button>
         </div>
     </article>
     <%}%>
