--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <!-- Head-->
-<%- include("./partials/head") %>
+<%- include("../partials/head") %>
 
 <body>
     <!-- Header-->
-    <%- include("./partials/header") %>
+    <%- include("../partials/header") %>
     <section>
         <div class="lg-div-form">
             <div class="lg-div-login">
@@ -18,13 +18,13 @@
                 <button type="submit" class="lg-submit">Ingresar</button>
             </form>
             <h4>¿No tenes cuenta?</h4>
-            <a href="/register" class="lg-a">Registrate aca</a>
+            <a href="/users/register" class="lg-a">Registrate aca</a>
         </div>
     </section>
 
 
     
     <!-- Footer-->
-    <%- include("./partials/footer") %>
+    <%- include("../partials/footer") %>
 </body>
 </html>
