--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <!-- Head-->
-<%- include("./partials/head") %>
+<%- include("../partials/head") %>
 
 <body>
     <!-- Header-->
-    <%- include("./partials/header") %>
+    <%- include("../partials/header") %>
     <section> 
         <form action="POST" class="rg-form">
             <input type="text" placeholder="Nombre" class="rg-input">
@@ -22,6 +22,6 @@
         </form>       
     </section>
     <!-- Footer-->
-    <%- include("./partials/footer") %>
+    <%- include("../partials/footer") %>
 </body>
 </html>
