--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,7 +7,7 @@
             <li><a href="/enDesarrollo">Nuestras Recetas </a></li>
         </ul>
         <ul class="rigth-navbar">
-            <li><a href="/login">Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
+            <li><a href="/users/login">Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
             <li>
                 <div class="pd-pc-links">
                     <a href="/product/productPage" class="tienda-botton">Tienda</a>
