--- a/views/product/productPage.ejs
+++ b/views/product/productPage.ejs
@@ -10,6 +10,14 @@
     
 
     <main class="pd-main">
+        <div class="pa-add-btn">
+            <div class="pa-div-add-btn">
+                <button class="pd-admin ">
+                    <a href="/product/productAdmin/0" class="pd-admin-a">Agregar</a>
+                </button>
+            </div>
+        </div>
+        
         <h2 class="pd-titulo">Tienda</h2>
         <section class="pd-tienda">
         <%- include("../partials/articles") %>
