--- a/views/partials/articles.ejs
+++ b/views/partials/articles.ejs
@@ -1,13 +1,14 @@
 
 <% for (i=1;i< cervezas.length;i++){%>
-    <article class="pd-product">
-        <img class="pd-img-product" src="/images/img-beer-temporary.jpg" width="360" alt="beer">
-        <div class="pd-datos-cerveza">
-            <h4><%= cervezas[i].name %></h4>
-            <h4>$ <%= cervezas[i].price %></h4>
-            <button class="pd-seleccionar"><a href="/product/productDetail/<%= cervezas[i].id %>" class="lg-a">Seleccionar</a></button>
-            <button class="pd-add"><a href="/product/productCart" class="lg-a">Agregar al carrito</a></button>
-            <button class="pd-admin"><a href="/product/productAdmin/<%= cervezas[i].id %>" class="pd-admin-a">Modificar </i></a></button>
-        </div>
-    </article>
+        <article class="col-12 col-sm-6 col-lg-3 pd-product">
+            <img class="pd-img-product" src="/images/img-beer-temporary.jpg" width="360" alt="beer">
+            <div class="pd-datos-cerveza">
+                <h4><%= cervezas[i].name %></h4>
+                <h4>$ <%= cervezas[i].price %></h4>
+                <button class="pd-seleccionar"><a href="/product/productDetail/<%= cervezas[i].id %>" class="lg-a">Seleccionar</a></button>
+                <button class="pd-add"><a href="/product/productCart" class="lg-a">Agregar al carrito</a></button>
+                <button class="pd-admin"><a href="/product/productAdmin/<%= cervezas[i].id %>" class="pd-admin-a">Modificar </i></a></button>
+            </div>
+        </article>
+
     <%}%>
