--- a/views/product/productPage.ejs
+++ b/views/product/productPage.ejs
@@ -16,11 +16,12 @@
                     <a href="/product/productAdmin/0" class="pd-admin-a">Agregar</a>
                 </button>
             </div>
+        </div>        
+        <h2 class="pd-titulo">Tienda</h2>
+        <div class="pd-tienda">
+            <%- include("../partials/articles") %>
         </div>
         
-        <h2 class="pd-titulo">Tienda</h2>
-        <section class="pd-tienda">
-        <%- include("../partials/articles") %>
     </main>
    
     <!-- Suscribe email-->
