--- a/views/partials/articles.ejs
+++ b/views/partials/articles.ejs
@@ -1,7 +1,7 @@
 
 <% for (i=1;i< cervezas.length;i++){%>
         <article class="col-12 col-sm-6 col-lg-3 pd-product">
-            <img class="pd-img-product" src="/images/img-beer-temporary.jpg" width="360" alt="beer">
+            <img class="pd-img-product" src="/images/<%= cervezas[i].image %>" width="360" alt="beer">
             <div class="pd-datos-cerveza">
                 <h4><%= cervezas[i].name %></h4>
                 <h4>$ <%= cervezas[i].price %></h4>
