feat: agrego slider en home y corrijo subir nueva img desde edicion

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,18 +8,13 @@
     <!-- Header-->
     <%- include("./partials/header") %>
     <section class="ind-top">
-        
-        <div class="reel-1">
-            <img src="/images/beerJar.jpg" alt="">       
-        </div>
-        <div class="reel-2">
-            <img src="/images/beerGlasses.jpg" alt="">       
-        </div>
-        <div class="reel-3">
-            <img src="/images/beerJar.jpg" alt="">       
-        </div>
-        <div class="reel-4">
-            <img src="/images/beerGlasses.jpg" alt="">       
+        <div class="slider">
+            <ul>
+                <li><img src="/images/beerJar.jpg" alt="image slider" class="slider-img"></li>
+                <li><img src="/images/beerGlasses.jpg" alt="image slider" class="slider-img"></li>
+                <li><img src="/images/beerJar.jpg" alt="image slider" class="slider-img"></li>
+                <li><img src="/images/beerGlasses.jpg" alt="image slider" class="slider-img"></li>
+            </ul>
         </div>
     </section>
     <section class="ind-middle">
