--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1137,7 +1137,7 @@ section .pd-quienes-somos-right, section .pd-quienes-somos-left {
 /*index-top*/
 section.ind-top {
   display: flex;
-  flex-wrap: wrap; /*REVISAR ESTO DEL REEL*/
+  flex-wrap: wrap; 
   justify-content: space-evenly;
   width: 100%;
   margin-top: 5px;
@@ -1145,15 +1145,46 @@ section.ind-top {
   border-top: 2px #949494 solid;
 }
 
-div.reel-1,
-div.reel-2,
-div.reel-3,
-div.reel-4 {
-  display: flex;
-  justify-content: space-around;
-  margin: 10px 5px;
-  max-height: 200px;
+/*slider index-top*/
+.slider {
+  width: 90%;
+  margin: auto;
+  overflow: hidden;
 }
+.slider ul {
+  display: flex;
+  padding: 10;
+  width: 400%;
+  animation: change 20s infinite alternate;
+  animation-timing-function: ease-in;
+}
+.slider li {
+  width: 50%;
+  list-style: none;
+}
+.slider img {
+  width: 100%;
+  max-height: 300px;
+}
+
+@keyframes change {
+  0% { margin-left: 0;}
+  20% { margin-left: 0;}
+
+  25% { margin-left: -100%;}
+  45% { margin-left: -100%;}
+
+  50% { margin-left: -200%;}
+  70% { margin-left: -200%;}
+
+  75% { margin-left: -300%;}
+  100% { margin-left: -300%;}
+}
+
+
+/*slider index-top*/
+
+
   /*seccion Media*/
   
   section.ind-bottom {
