--- a/views/product/productAdmin.ejs
+++ b/views/product/productAdmin.ejs
@@ -39,7 +39,7 @@
                     </li>
                     <li>
                         <h5>Color: </h5>
-                        <p><input type="text" name="color" value="<%=cervezaToEdit.color%> SRM"></p>
+                        <p><input type="text" name="color" value="<%=cervezaToEdit.color%>"></p>
                     </li>
                     <li>
                         <h5>Lúpulo/s: </h5>
