feat: Login process parcial y validación user en DB

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -7,7 +7,7 @@
             <li>Enlaces</li>
             <li><a href="/productPage">Tienda </a></li>
             <li><a href="/quienesSomos">Quienes somos </a></li>
-            <li><a href="/enDesarrollo">Nuestras Recetas </a></li>
+            <li><a href="/nuestrasRecetas">Nuestras Recetas </a></li>
         </ul>
         <ul class="footer-social-media">
             <li>Contacto</li>
