--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -12,9 +12,26 @@
                 <button class="lg-button"><i class="fa-brands fa-google"> Ingresar con Google </i></button>
                 <button class="lg-button"><i class="fa-brands fa-facebook-f"> Ingresar con Facebook </i></button>
             </div>
-            <form action="" class="lg-form-login">
-                <input type="text" class="lg-input" placeholder="Email">
-                <input type="text" class="lg-input" placeholder="Contraseña">
+            <form action="/users/login" method="POST" class="lg-form-login">
+                <div>
+                    <label>Email</label>
+                    <input type="email" name="email" class="lg-input">
+                    <% if (locals.errors && errors.email) { %>
+                        <div class="text-danger">
+                            <%= errors.email.msg %>
+                        </div>
+                    <% } %>
+                </div>
+                <div>
+                    <label>Constraseña</label>
+                    <input type="password" name="password" class="lg-input">
+                </div>
+                <div>
+                    <label>
+                        <input type="checkbox" name="remember_user">Recordar mi usuario
+                    </label>
+                </div>
+                
                 <button type="submit" class="lg-submit">Ingresar</button>
             </form>
             <h4>¿No tenes cuenta?</h4>
