--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -7,14 +7,97 @@
     <!-- Header-->
     <%- include("../partials/header") %>
     <section> 
-        <form action="/users/register" class="rg-form" method="POST">
-            <input type="text" name="name"placeholder="Nombre" class="rg-input">
-            <input type="text" name="lastName" placeholder="Apellido" class="rg-input">
-            <input type="text" name="email" placeholder="Email" class="rg-input">
-            <input type="text" name="adress" placeholder="Direccion" class="rg-input">
-            <input type="date" name="birthDate" placeholder="Fecha de nacimiento" class="rg-input">
-            <input type="password" name="pass" placeholder="Contraseña" class="rg-input">
-            <input type="password" placeholder="Contraseña" class="rg-input">
+        <form action="/users/register" class="rg-form" method="POST" enctype="multipart/form-data">
+            <div>
+            <label><b>Nombre</b></label>
+            <input 
+                type="text" 
+                name="name"
+                class="rg-input"  <%= locals.errors && errors.name ? 'is-invalid' : null %>"
+                value="<%= locals.oldData ? oldData.name : null %>">
+                <% if (locals.errors && errors.name) { %>
+                    <div class="text-danger">
+                        <%= errors.name.msg %> 
+                    </div>
+                <% } %>
+            </div>
+            <div>
+                <label><b>Apellido</b></label>
+                <input 
+                    type="text"
+                    name="lastName" 
+                    class="rg-input"<%= locals.errors && errors.lastName ? 'is-invalid' : null %>"
+                    value="<%= locals.oldData ? oldData.lastName : null %>">
+                    <% if (locals.errors && errors.lastName) { %>
+                        <div class="text-danger">
+                            <%= errors.lastName.msg %> 
+                        </div>
+                    <% } %>
+            </div>
+           <div>
+            <label><b>Email</b></label>
+            <input 
+                type="text" 
+                name="email" 
+                class="rg-input" <%= locals.errors && errors.email ? 'is-invalid' : null %>"
+                value="<%= locals.oldData ? oldData.email : null %>">
+                <% if (locals.errors && errors.email) { %>
+                    <div class="text-danger">
+                        <%= errors.email.msg %> 
+                    </div>
+                <% } %>
+           </div>
+           <div>
+            <label><b>Dirección</b></label>
+               <input 
+                    type="text" 
+                    name="address" 
+                    class="rg-input" <%= locals.errors && errors.address ? 'is-invalid' : null %>"
+                    value="<%= locals.oldData ? oldData.address : null %>">
+                    <% if (locals.errors && errors.address) { %>
+                        <div class="text-danger">
+                            <%= errors.address.msg %> 
+                        </div>
+                    <% } %>
+            </div>
+            <div>
+                <label><b>Fecha de nacimiento</b></label>
+                <input 
+                    type="date"
+                    name="birthDate" 
+                    class="rg-input" <%= locals.errors && errors.birthDate ? 'is-invalid' : null %>"
+                    value="<%= locals.oldData ? oldData.birthDate : null %>">
+                    <% if (locals.errors && errors.birthDate) { %>
+                        <div class="text-danger">
+                            <%= errors.birthDate.msg %> 
+                        </div>
+                    <% } %>
+            </div>
+            <div>
+                <label><b>Contraseña</b></label>
+                <input 
+                    type="password" 
+                    name="password" 
+                    class="rg-input"<%= locals.errors && errors.password ? 'is-invalid' : null %>"
+                    value="<%= locals.oldData ? oldData.password : null %>">
+                    <% if (locals.errors && errors.password) { %>
+                        <div class="text-danger">
+                            <%= errors.password.msg %> 
+                        </div>
+                    <% } %>
+            </div>
+
+                                 
+            <div class="col-md-6 my-1">
+                <div class="form-group">
+                    <label><b>Imagen de perfil:</b></label>
+                    <input 
+                        type="file" 
+                        name="avatar"
+                        
+                    >
+                </div>
+            </div>
             <div class="rg-btn-div">
                 <input type="submit" name="" id="rg-submit" class="rg-submit">
                 <input type="reset" class="rg-reset">
