--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,12 +7,27 @@
             <li><a href="/nuestrasRecetas">Nuestras Recetas </a></li>
         </ul>
         <ul class="rigth-navbar">
-            <li><a href="/users/login">Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
+            <li><div class="pd-pc-links">
+                <a href="/product/productPage" class="tienda-botton">Tienda</a>
+                <a href="/product/productCart"><i class="fas fa-shopping-cart"></i></a>
+            </div>
+            </li>
             <li>
-                <div class="pd-pc-links">
-                    <a href="/product/productPage" class="tienda-botton">Tienda</a>
-                    <a href="/product/productCart"><i class="fas fa-shopping-cart"></i></a>
-                </div>
+                <ul class="main-navbar-dropdown-menu-container">
+                    <% if (locals.isLogged) { %>
+                        <li>
+                            <img src="/images/avatars/<%= locals.userLogged.avatar %>">
+                            <%= locals.userLogged.name %>
+                            </a>
+                            <ul class="main-navbar-dropdown-menu">
+                                <li><a href="/users/profile">Mi perfil</a></li>
+                                <li><a href="/users/logout">Salir</a></li>
+                            </ul>
+                        </li>
+                        <% } else { %>
+                            <li><a href="/users/login">Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
+                            <% } %>
+                </ul>
             </li>
         </ul>
     </nav> 
