--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -99,45 +99,6 @@ a { text-decoration: none;}
   display: none;
 }
 
-.main-navbar-dropdown-menu-container {
-  list-style: none;
-  display: flex;
-  justify-content: space-around;
-}
-.main-navbar-dropdown-menu-container li img {
-  width: 35px;
-  border-radius: 100%;
-
-}
-.main-navbar-dropdown-menu-container > li > a{
-  display: block;
-  justify-content: space-around;
-  color: white;
-  padding: 15px
-}
-.main-navbar-dropdown-menu {
-  position: absolute;
-  display: none;
-  list-style: none;
-  width: 200px;
-  background-color: rgba(127, 175, 158)
-}
-.main-navbar-dropdown-menu-container li:hover .dropdown-menu{
-  display: block;
-}
-.main-navbar-dropdown-menu li:hover {
-  background-color: #03242F;
-}
-.main-navbar-dropdown-menu li a {
-  display: block;
-  color: black;
-  padding: 15px 15px 15px 20px;
-  text-decoration: none;
-}
-.main-navbar-dropdown-menu li a:hover {
-  color:white;
-}
-
 .ps-div{
   display: flex;
   max-width: 50%;
@@ -1460,12 +1421,55 @@ div.bottom-content{
   }
   .rigth-navbar {
     /*pone los elementos de la lista en linea*/
-    display: flex;
+    display: block; /*AC: cambié flex x block*/
     align-items: center;
     justify-content: space-around;
     width: 100%;
     flex-direction: column;
     align-items: flex-start;
+  }
+
+  .main-navbar-dropdown-menu-container {   
+    list-style: none;
+    display: flex;
+    justify-content: space-around;
+  }
+
+  .main-navbar-dropdown-menu-container li img {
+    width: 35px;
+    border-radius: 100%;
+  }
+  .main-navbar-dropdown-menu-container ul > li > a{
+    display: block;
+    color: white;
+    padding: 15px;
+    text-decoration: none;
+  }
+  .main-navbar-dropdown-menu ul:hover {
+    background-color: white;
+  }
+
+  .main-navbar-dropdown-menu {
+    position: absolute;
+    display: none;
+    list-style: none;
+    width: 200px;
+    background-color: rgb(0, 0, 0)
+  }
+  .main-navbar-dropdown-menu-container li:hover .main-navbar-dropdown-menu{
+    display: block;
+  }
+  .main-navbar-dropdown-menu li:hover {
+    background-color: #000000;
+  }
+  .main-navbar-dropdown-menu li a {
+    display: block;
+    color: black;
+    padding: 15px 15px 15px 20px;
+    text-decoration: none;
+  }
+  .main-navbar-dropdown-menu li a:hover {
+    color:white;
   }
 
   .secondary-navbar {
@@ -1675,6 +1679,8 @@ section.ind-top {
     flex-direction: row;
     align-items: flex-end;
   }
+
+  
 
   /*°°°°°°°  FOOTER Y SUSCRIBE °°°°°°°°°°°°°*/
   /*°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°*/
