--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -17,7 +17,7 @@
 		</div>
 
 		<div>
-			<a class="dropdown-item" href="/">Salir</a>
+			<a class="dropdown-item" href="/users/logout">Salir</a>
 		</div>
 	</div>
 	<!-- //Container -->
